--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<textarea data-template>
 							## Possible downtime 
 
-							![happy](assets/pan-down.jpg)
+							![down](assets/pan-down.jpg)
 
 							Any mistake could lead to downtime
 						</textarea>
@@ -214,19 +214,23 @@
 					</section>
 					<section data-markdown>
 						<textarea data-template>
-							Almost
+							## Almost
 
 							![smashed-face](assets/pan-smashed-face.jpg)
+
+							90s was a simpler time but also had many problems
 						</textarea>
 					</section>
 					<section data-markdown>
 						<textarea data-template>
-							Can we take best of both worlds?
+							## Why not both?
 
 							<div style="display:flex; width:100%">
-							<img src="assets/pan-fear.jpg" width="50%">
-							<img src="assets/pan-laugh.jpg" width="50%">
+								<img src="assets/pan-fear.jpg" width="50%">
+								<img src="assets/pan-laugh.jpg" width="50%">
 							</div>
+
+							Can we take best of both worlds?
 						</textarea>
 					</section>
 				</section>
@@ -572,7 +576,16 @@
 					</section>
 					<section data-markdown>
 						<textarea data-template>
-							## Rediscovering how to fly
+							## Pull Requests
+					
+							![happy](assets/smee.jpg)
+
+							Instant and infinite environments
+						</textarea>
+					</section>
+					<section data-markdown>
+						<textarea data-template>
+							## Welcome to Neverland
 					
 							<video src="assets/pan-flying.mp4" controls></video>
 						</textarea>
